[gd_scene load_steps=7 format=3 uid="uid://ceij83fgq4wqo"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_0123"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1"]
animations = [{
"frames": [],
"loop": true,
"name": "attack",
"speed": 10.0
}, {
"frames": [],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": "walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 150.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 40.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(1, 0, 0, 1)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_0123")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1")
animation = &"idle"

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_2")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -35.0
max_value = 30.0
value = 30.0
show_percentage = false

[node name="HealthBar/Background" type="StyleBoxFlat" parent="HealthBar"]
bg_color = Color(0.2, 0.2, 0.2, 1)
